# 221-329_Ediseev_crypto

221_329_Ediseev/: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab2/VB/: ReadWriteFile.exe.lnk  createFile.bat  file.cryptLab2  load.bat.lnk  unload.bat.lnk  unloadLoad.bat.lnk
lab2/VB/drivers/: passthrough.cat
lab2/VB/fold/: info.txt  load.bat  unload.bat  unloadLoad.bat
lab2/VB/fold/ReadWriteFile/: ReadWriteFile.sln
lab2/VB/fold/ReadWriteFile/ReadWriteFile/: ReadWriteFile.vcxproj  ReadWriteFile.vcxproj.filters  app.c
lab2/VB/fold/ReadWriteFile/ReadWriteFile/x64/Debug/: ReadWriteFile.exe.recipe  ReadWriteFile.ilk  vc143.idb
lab2/VB/fold/ReadWriteFile/ReadWriteFile/x64/Debug/ReadWriteFile.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ReadWriteFile.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
lab2/pt/: passThrough.c  passThrough.inf  passThrough.vcxproj  passThrough.vcxproj.Filters
lab2/pt/passThrough/x64/Debug/: vc143.idb
lab2/pt/passThrough/x64/Debug/passThrough.tlog/: passThrough.lastbuildstate
lab2/pt/x64/Debug/: passThrough.cer  passThrough.inf  passThrough.sys.recipe  passThrough.vcxproj.FileListAbsolute.txt
lab2/pt/x64/Debug/passThrough/: passThrough.sys
lab2/pt/x64/Debug/passThrough.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Inf2Cat.command.1.tlog  inf2cat-expand.9876.read.1.tlog  inf2cat-expand.9876.write.1.tlog  inf2cat-expand.read.1.tlog  inf2cat-expand.write.1.tlog  inf2cat.read.1.tlog  inf2cat.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  passThrough.lastbuildstate  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  signtool.command.1.tlog  signtool.read.1.tlog  signtool.timestamp.1.tlog  signtool.write.1.tlog  stampinf.command.1.tlog  stampinf.read.1.tlog
lab_1/: CMakeLists.txt  listitem.cpp  listitem.h  listitem.ui  listitem.ui.autosave  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  resource.qrc
lab_1/json/: cridentials.json  cridentials_encrypted.json  cridentials_to_encrypt.json
